--- a/C# Web Basics/SIS/SulsApp/Views/Home/Index.html
+++ b/C# Web Basics/SIS/SulsApp/Views/Home/Index.html
@@ -3,6 +3,7 @@
         <div class="heading-container bottom-buffer-md">
             <h1>@Model.Message</h1>
             <h2>@Model.Year</h2>
+            <img src="img/redDell.jpg" width="800"/>
         </div>
         <h3><a href="/Users/Login">Login</a> to use the Platform.</h3>
         <h3><a href="/Users/Register">Register</a> if you don't have an account.</h3>
