--- a/C# Web Basics/SIS/SulsApp/Views/Users/Login.html
+++ b/C# Web Basics/SIS/SulsApp/Views/Users/Login.html
@@ -3,7 +3,7 @@
     <div class="top-border-line primary-separator"></div>
     <div class="form-group">
         <label for="username" class="suls-text-color">Username</label>
-        <input type="text" class="form-control" id="username" placeholder="Username..." name="username">
+        <input type="text" class="form-control" value="Input your username" id="username" placeholder="Username..." name="username">
     </div>
     <div class="form-group">
         <label for="password" class="suls-text-color">Password</label>
