--- a/ASP.NET/MyFirstMvcApp/Views/Shared/_Layout.cshtml
+++ b/ASP.NET/MyFirstMvcApp/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Create">Add new car</a>
+                        </li>
                         @if (IsSectionDefined("MenuItems"))
                         {
                             @RenderSection("MenuItems", false)
