--- a/ASP.NET/MyFirstMvcApp/Views/Car/Create.cshtml
+++ b/ASP.NET/MyFirstMvcApp/Views/Car/Create.cshtml
@@ -10,35 +10,50 @@
 
 <form asp-controller="Car" asp-action="Create">
 
-    <label asp-for="Car.Brand"></label>
-    <input asp-for="Car.Brand" class="form-control" />
-
-    <label asp-for="Car.Model"></label>
-    <input asp-for="Car.Model" class="form-control" />
-
-    <label asp-for="Description"></label>
-    <textarea asp-for="Description" class="form-control" placeholder="Enter description"></textarea>
-
-    <label asp-for="ReleaseDate"></label>
-    <input asp-for="ReleaseDate" class="form-control" />
-
-    <label asp-for="Year"></label>
-    <input asp-for="Year" class="form-control" />
-
-    <label asp-for="Price"></label>
-    <input asp-for="Price" class="form-control" />
-
-  @*@{
-        var items = new List<SelectListItem>
-        {
-            new SelectListItem { Text = "Niki", Value = "1"},
-            new SelectListItem { Text = "Pesho", Value = "2"},
-            new SelectListItem { Text = "Gosho", Value = "3"}
-        };
+    <div>
+        <label asp-for="Car.Brand"></label>
+        <input asp-for="Car.Brand" class="form-control" />
+        <span asp-validation-for="Car.Brand" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Car.Model"></label>
+        <input asp-for="Car.Model" class="form-control" />
+        <span asp-validation-for="Car.Model" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Description"></label>
+        <textarea asp-for="Description" class="form-control" placeholder="Enter description"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+    <div>
+        <label asp-for="Year"></label>
+        <input asp-for="Year" class="form-control" data-val="false"/> @*disable js validation*@
+        <span asp-validation-for="Year" class="text-danger" ></span>
+    </div>
+    <div>
+        <label asp-for="Price"></label>
+        <input asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
+    </div>
+    @*@{
+    var items = new List<SelectListItem>
+    {
+    new SelectListItem { Text = "Niki", Value = "1"},
+    new SelectListItem { Text = "Pesho", Value = "2"},
+    new SelectListItem { Text = "Gosho", Value = "3"}
+    };
     }*@
-
-    <label asp-for="Type"></label>
-    <select asp-for="Type" class="form-control" asp-items="Html.GetEnumSelectList<CarType>()"></select> @*"items"*@
+    <div>
+        <label asp-for="Type"></label>
+        <select asp-for="Type" class="form-control" asp-items="Html.GetEnumSelectList<CarType>()"> @*"items"*@
+            <option value="0">Please select</option>
+        </select> 
+        <span asp-validation-for="Type" class="text-danger"></span>
+    </div>
 
     <input type="submit" />
 </form>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
