--- a/ASP.NET/Eventures/Eventures/Views/Home/Index.cshtml
+++ b/ASP.NET/Eventures/Eventures/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron bg-eventures">
+    <h1 class="display-4">Eventures - ticket service</h1>
+    <hr class="hr-2 bg-dark"/>
 </div>
