--- a/ASP.NET/Eventures/Eventures/Views/Shared/_Layout.cshtml
+++ b/ASP.NET/Eventures/Eventures/Views/Shared/_Layout.cshtml
@@ -18,12 +18,32 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                    <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        @if (this.User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <div class="dropdown nav-link text-dark">
+                                    <a class="dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Eventures</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/Events">All Events</a></li>
+                                        @if (this.User.IsInRole("Admin"))
+                                        {
+                                            <li><a class="dropdown-item" href="/Events/Create">Create Event</a></li>
+                                        }
+                                    </ul>
+                                </div>
+                            </li>
+                        }
+                    </ul>
+                    <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="Identity" asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="Identity" asp-controller="Account" asp-action="Register">Register</a>
                         </li>
                     </ul>
                 </div>
