--- a/ASP.NET/Eventures/Eventures/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/ASP.NET/Eventures/Eventures/Areas/Identity/Pages/Account/Logout.cshtml
@@ -5,11 +5,10 @@
 }
 
 <header>
-    <h1>@ViewData["Title"]</h1>
     @{
         if (User.Identity?.IsAuthenticated ?? false)
         {
-            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" method="post">
                 <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
             </form>
         }
