--- a/ASP.NET/Eventures/Eventures/Views/Home/Index.cshtml
+++ b/ASP.NET/Eventures/Eventures/Views/Home/Index.cshtml
@@ -6,3 +6,8 @@
     <h1 class="display-4">Eventures - ticket service</h1>
     <hr class="hr-2 bg-dark"/>
 </div>
+
+@if (this.User.Identity.IsAuthenticated)
+{
+    <h2>Welcome, @this.User.Identity.Name</h2>
+}
