--- a/ASP.NET/Eventures/Eventures/Views/Shared/_Layout.cshtml
+++ b/ASP.NET/Eventures/Eventures/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             </li>
                         }
                     </ul>
-                    <ul class="navbar-nav">
+                    @*<ul class="navbar-nav">
                         @if (!this.User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
@@ -54,7 +54,8 @@
                                 <a class="nav-link text-dark" asp-area="Identity" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         }
-                    </ul>
+                    </ul>*@
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
