--- a/ASP.NET/Eventures/Eventures/Views/Shared/_LoginPartial.cshtml
+++ b/ASP.NET/Eventures/Eventures/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using Domain;
+@using Microsoft.AspNetCore.Identity
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<EventuresUser> SignInManager
+@inject UserManager<EventuresUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
