--- a/ASP.NET/WebApiDemo/Views/Home/Index.html
+++ b/ASP.NET/WebApiDemo/Views/Home/Index.html
@@ -88,13 +88,21 @@
         // parentElement.prepend(parentElement.lastElementChild.cloneNode(true));
 
         // Events
-        let parentElement = document.getElementsByTagName('ul')[0];
-        parentElement.addEventListener('click', onListClick);
+        // let parentElement = document.getElementsByTagName('ul')[0];
+        // parentElement.addEventListener('click', onListClick);
 
-        function onListClick() {
-            let lastElementChild = parentElement.lastElementChild;
-            parentElement.prepend(lastElementChild);
-        }
+        // function onListClick() {
+        //     let lastElementChild = parentElement.lastElementChild;
+        //     parentElement.prepend(lastElementChild);
+        // }
+
+        // BOM
+        // console.log(navigator.language);
+        // console.log(screen);
+        // document.location = "http://google.com";
+        // alert("OK");
+        //history.back();
+        console.log(window);
 
     </script>
 </body>
